Location text mobile overflow issue

--- a/style/main.scss
+++ b/style/main.scss
@@ -40,6 +40,7 @@ html, body{
 			.ui-select-choices-row{
 				width: 100%;
 				height: 50px;
+				position: relative;
 				&.active{
 					p.university-location{
 						color: #E0E0E0 !important;
