--- a/style/mobile.scss
+++ b/style/mobile.scss
@@ -15,3 +15,11 @@
     	text-align: center;
 	}
 }
+
+@media(max-width: 360px){
+  	#main-content .grade-input-form .university-selection-input .ui-select-choices-row .ui-select-choices-row-inner p.university-location {
+		font-size: 11px;
+	    position: absolute;
+    	right: 12px;
+	}
+}
